@@ -203,4 +203,9 @@ Error: This type cannot be unboxed because
 #             type 'a s
 type ('a, 'p) t = private 'a s
 type 'a packed = T : ('a, 'b) t -> 'a packed [@@unboxed]
+#         type f = { field : 'a. 'a list; } [@@unboxed]
+# val g : f array =
+  [|{field = []}; {field = []}; {field = []}; {field = []}; {field = []};
+    {field = []}; {field = []}; {field = []}; {field = []}; {field = []}|]
+# val h : f = {field = []}
 # 
