@@ -138,8 +138,10 @@ let rec get_unboxed_type_representation env ty fuel =
        | Type_variant [{cd_args = Cstr_tuple [ty2]; _}]
        | Type_variant [{cd_args = Cstr_record [{ld_type = ty2; _}]; _}]}
 
-         -> get_unboxed_type_representation env
-             (Ctype.apply env type_params ty2 args) (fuel - 1)
+      ->
+        let ty2 = match ty2.desc with Tpoly (t, _) -> t | _ -> ty2 in
+        get_unboxed_type_representation env
+          (Ctype.apply env type_params ty2 args) (fuel - 1)
     | {type_kind=Type_abstract} -> None
           (* This case can occur when checking a recursive unboxed type
              declaration. *)
