@@ -78,6 +78,10 @@ Working version
 - MPR#7668: -principal is broken with polymorphic variants
   (Jacques Garrigue, report by Jun Furuse)
 
+- MPR#7682, GPR#1495: fix [@@unboxed] for records with 1 polymorphic field
+  (Alain Frisch, report by Stéphane Graham-Lengrand)
+
+
 4.06 maintenance branch
 -----------------------
 
